--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -13,7 +13,16 @@
         "endOfLine": "auto"
       }
     ],
-
+    "import/prefer-default-export": "off",
+    "no-restricted-syntax": ["error", "FunctionExpression", "FunctionDeclaration"],
+    "react/function-component-definition": [
+      "error",
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "arrow-body-style": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/extensions": [
       "error",
@@ -29,5 +38,24 @@
     "ecmaVersion": "latest",
     "sourceType": "module",
     "project": "./tsconfig.json"
+  },
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "parser": "@typescript-eslint/parser"
+    }
+  ],
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "project": ["tsconfig.base.json"]
+      },
+      "node": {
+        "project": ["tsconfig.base.json"]
+      }
+    }
   }
 }
